1999-06-11  Warren Levy  <warrenl@cygnus.com>

	* gnu/testlet/java/net/Socket/SocketTest.java: Added harness.check
	calls.
	(test_Basics): Changed from unreachable host to mothership.

1999-06-10  Warren Levy  <warrenl@cygnus.com>

	* gnu/testlet/java/io/DataInputStream/readLine.java (test):
	Add casts to byte for instances of '\n', '\r'.
	* gnu/testlet/java/net/Socket/SocketServer.java (init): Revert
	harness.fail instances to println's per original.
	(run): ditto.
	* gnu/testlet/java/net/URL/MyURLStreamHandler.java (MyURLStreamHandler):
	Added null constructor.
	* gnu/testlet/java/net/URL/URLTest.java: Added Uses: tag.
	* gnu/testlet/java/text/Collator/Constants.java (test): Omit
	redundant instances of fully qualified class name 'java.text.'.

1999-05-28  Warren Levy  <warrenl@cygnus.com>

	* gnu/testlet/java/net/MulticastSocket/MulticastSocketTest.java
	(test_Basics): Added harness checks for setTTL & getTTL calls.

1999-05-28  Warren Levy  <warrenl@cygnus.com>

	* gnu/testlet/java/net/MulticastSocket/MulticastSocketTest.java
	(test_Basics): Null argument to joinGrp & leaveGrp cause a
	NullPointerException.

1999-05-19  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/util/zip/ZipInputStream/reference.zip: New file.
	* gnu/testlet/java/util/zip/ZipInputStream/basic.java: New file.

	* gnu/testlet/java/util/zip/basic.java: New file.
	* gnu/testlet/java/util/zip/reference.data: Likewise.
	* gnu/testlet/java/util/zip/reference.gz: Likewise.

1999-05-18  Warren Levy  <warrenl@cygnus.com>

	* gnu/testlet/java/net/DatagramSocket/DatagramSocketTest2.java
	  (invalid_port): Catch NullPointerException.
	  (invalid_receive_data): Print stack trace after failure msg.
	* gnu/testlet/java/net/MulticastSocket/MulticastClient.java:
	  New file.
	* gnu/testlet/java/net/MulticastSocket/MulticastServer.java:
	  New file.
	* gnu/testlet/java/net/MulticastSocket/MulticastSocketTest.java:
	  New file.

1999-05-12  Warren Levy  <warrenl@cygnus.com>
