@@ -39,7 +39,7 @@ class BasicSocketServer extends Thread {
 		}
 		catch ( Exception e )
 		{
-			harness.fail("Error : BasicSocketServer::init failed " + 
+			System.out.println("Error : BasicSocketServer::init failed " + 
 				"Exception should not be thrown here " + e );
 		}
 	}
@@ -48,7 +48,7 @@ class BasicSocketServer extends Thread {
 	{
 		if ( srvsock == null )
 		{
-			harness.fail("Error : BasicSocketServer::run failed  - 1 " + 
+			System.out.println("Error : BasicSocketServer::run failed  - 1 " + 
 				"server socket creation was not successful" );
 			return;
 		}
@@ -65,7 +65,7 @@ class BasicSocketServer extends Thread {
 				dos.close();
 			}
 			catch ( Exception e ){
-				harness.fail("Error : BasicSocketServer::run failed - 2" + 
+				System.out.println("Error : BasicSocketServer::run failed - 2" + 
 				"exception was thrown" );
 			}
 		}
