@@ -1,3 +1,13 @@
+1999-06-21  Warren Levy  <warrenl@cygnus.com>
+
+	* gnu/testlet/java/net/DatagramSocket/DatagramSocketTest.java:
+	Set up thread like test_echo().
+	* gnu/testlet/java/net/DatagramSocket/DatagramSocketTestEchoTimeoutServer.java:
+	Revert harness.fail instances to println's per original.  Don't sleep.
+	* gnu/testlet/java/net/ServerSocket/BasicSocketServer.java:
+	Revert harness.fail instances to println's per original.
+	* gnu/testlet/java/net/ServerSocket/MyBasicSocketServer.java: ditto.
+
 1999-06-11  Warren Levy  <warrenl@cygnus.com>
 
 	* gnu/testlet/java/net/Socket/SocketTest.java: Added harness.check
